[workspace]
resolver = "2"
members = [
    "crates/keychain",
    "crates/keychain-env",
    "crates/keychain-file",
    "crates/keychain-aws",
    "crates/keychain-gcp",
    "crates/keychain-azure",
    "crates/keychain-vault",
]

[workspace.package]
version = "0.0.1-alpha.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cyphera-labs/keychain"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
