[package]
name = "cyphera-keychain"
description = "Universal key resolution — one API, every key store"
version = "0.0.1-alpha.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cyphera-labs/keychain"

[features]
aws = ["dep:ureq", "dep:serde", "dep:serde_json", "dep:rand"]
gcp = ["dep:ureq", "dep:serde", "dep:serde_json", "dep:rand"]
azure = ["dep:ureq", "dep:serde", "dep:serde_json", "dep:rand"]
vault = ["dep:ureq", "dep:serde", "dep:serde_json"]
all = ["aws", "gcp", "azure", "vault"]

[dependencies]
thiserror = "2"
hex = "0.4"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
ureq = { version = "3", features = ["json"], optional = true }
rand = { version = "0.8", optional = true }
