[package]
name = "keychain-aws"
description = "AWS KMS backend for keychain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keychain = { path = "../keychain" }
thiserror = { workspace = true }
# aws-sdk-kms = "1"  # TODO: uncomment when implementing
# aws-config = "1"
# tokio = { workspace = true }
