[package]
name = "cyphera-keychain-aws"
description = "AWS KMS backend for keychain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keychain = { path = "../keychain" }
thiserror = { workspace = true }
ureq = { version = "3", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
base64 = { workspace = true }
