[package]
name = "keychain-vault"
description = "HashiCorp Vault backend for keychain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keychain = { path = "../keychain" }
thiserror = { workspace = true }
# vaultrs = "0.7"  # TODO
