[package]
name = "keychain-vault"
description = "HashiCorp Vault backend for keychain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keychain = { path = "../keychain" }
thiserror = { workspace = true }
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
